--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -16,6 +16,7 @@ button.lock: Uzamknout
 button.unlock: Odemknout
 button.export: Exportovat
 button.import: Importovat
+button.select_all: 'Vybrat vše'
 required: povinný
 error.not_found: 'Stránka, kterou se snažíte zobrazit, neexistuje nebo byla smazána.'
 error.not_authorized: 'Nemáte dostatečná práva pro zobrazení této stránky.'
@@ -47,8 +48,12 @@ user.enabled: Povoleno
 user.disabled: Zakázáno
 user.locked: Zamčený
 permissions: Práva
+role: Role
 role.administrator: Administrátor
 role.user: Uživatel
+role.author: Autor
+role.responsible: Odpovědnost
+role.registered: Registrovaný
 description: Popis
 language: Jazyk
 theme: Vzhled
@@ -64,7 +69,7 @@ password.cant_change: 'Tento účet používá externí autentifikaci. Zde heslo
 security.forgot_password: 'Zapomenuté heslo'
 security.forgot_password.email_sent: 'Byl vám zaslán email s intrukcemi jak si nastavíte nové heslo.'
 security.change_password: 'Změnit heslo'
-security.password_expired: ~
+security.password_expired: 'Platnost vašeho hesla vypršela a administrátor vás žádá o jeho změnu.'
 key.tab: ~
 key.space: ~
 comma: ~
@@ -79,6 +84,7 @@ line_endings: 'Konce řádků'
 group: Skupina
 groups: Skupiny
 others: Ostatní
+allowed: Povoleno
 members: Členové
 membership: Členství
 group.new: 'Nová skupina'
@@ -112,6 +118,39 @@ template.locked: Uzamčen
 template.confirm.delete: 'Jste si jisti, že chcete smazat tuto šablonu?'
 template.conflict.name: 'Šablona se zadaným jménem již existuje.'
 template.conflict.prefix: 'Šablona se zadaným předponou již existuje.'
+template.permission.view_issues: 'Zobrazit úkoly'
+template.permission.create_issues: ~
+template.permission.edit_issues: 'Upravování úkolů'
+template.permission.postpone_issues: ~
+template.permission.resume_issues: ~
+template.permission.reassign_issues: ~
+template.permission.reopen_issues: ~
+template.permission.add_comments: ~
+template.permission.add_files: ~
+template.permission.remove_files: ~
+template.permission.private_comments: ~
+template.permission.send_reminders: ~
+template.permission.delete_issues: 'Mazání úkolů'
+template.permission.attach_subissues: ~
+template.permission.detach_subissues: ~
+state: Stav
+states: Stavy
+state.new: 'Nový stav'
+state.name: 'Název stavu'
+state.abbreviation: Zkratka
+state.type: 'Typ stavu'
+state.type.initial: Počáteční
+state.type.interim: ~
+state.type.final: Koncový
+state.responsible: Odpovědnost
+state.responsibles: ~
+state.responsible.keep: Zachovat
+state.responsible.assign: Přiřadit
+state.responsible.remove: Odstranit
+state.transitions: Přechody
+state.next_by_default: 'Výchozí následující stav'
+state.make_initial: 'Vytvořit počáteční'
+state.confirm.delete: 'Jste si jisti, že chcete smazat tento stav?'
 state.conflict.name: 'Stav se zadaným jménem již existuje.'
 state.conflict.abbreviation: 'Stav se zadaným zkratkou již existuje.'
 field.conflict.name: 'Pole se zadaným jménem již existuje.'
